--- a/demo.html
+++ b/demo.html
@@ -1,36 +1,28 @@
-<template>
-  <div id="app">
-    <div
-      style="
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      "
-    >
-      <item-showcase id="test0" />
-      <item-showcase id="test1" />
-      <item-showcase id="test2" />
-      <item-showcase id="test3" />
-      <item-showcase id="test4" />
-    </div>
-  </div>
-</template>
+<meta charset="utf-8" />
+<title>item-showcase demo</title>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 
+<script src="./item-showcase.umd.js"></script>
+
+<link rel="stylesheet" href="./item-showcase.css" />
+<style>
+  body {
+    background-color: black;
+  }
+</style>
+<div style="width: 100%">
+  <item-showcase id="test0" />
+  <item-showcase id="test1" />
+  <item-showcase id="test2" />
+  <item-showcase id="test3" />
+  <item-showcase id="test4" />
+</div>
 <script>
-import ItemShowcase from "./components/ItemShowcase.vue";
-
-export default {
-  name: "App",
-  components: {
-    ItemShowcase,
-  },
-  mounted() {
-    window.itemShowcases.test0.applyOptions({
-      showLinkAsIcon: true,
-      displayAsTooltip: true,
-      imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/a/a0/The_Eternity_Shroud_inventory_icon.png`,
-      itemData: `
+  window.itemShowcases.test0.applyOptions({
+    showLinkAsIcon: true,
+    displayAsTooltip: true,
+    imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/a/a0/The_Eternity_Shroud_inventory_icon.png`,
+    itemData: `
           Rarity: Unique
           Replica Eternity Shroud
           Blood Raiment
@@ -63,12 +55,12 @@ export default {
           --------
           Has Perfidy Skin. You can reclaim this by shift-clicking this item.
 `,
-    });
-    window.itemShowcases.test1.applyOptions({
-      showLinkAsIcon: true,
-      displayAsTooltip: true,
-      imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/5/56/Harlequin_Mask_inventory_icon.png`,
-      itemData: `
+  });
+  window.itemShowcases.test1.applyOptions({
+    showLinkAsIcon: true,
+    displayAsTooltip: true,
+    imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/5/56/Harlequin_Mask_inventory_icon.png`,
+    itemData: `
           Rarity: Rare
           Brood Halo
           Harlequin Mask
@@ -101,12 +93,12 @@ export default {
           --------
           Has Assailum Skin. You can reclaim this by shift-clicking this item.
 `,
-    });
-    window.itemShowcases.test2.applyOptions({
-      showLinkAsIcon: true,
-      displayAsTooltip: true,
-      imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/e/e0/Medium_Cluster_Jewel_inventory_icon.png`,
-      itemData: `
+  });
+  window.itemShowcases.test2.applyOptions({
+    showLinkAsIcon: true,
+    displayAsTooltip: true,
+    imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/e/e0/Medium_Cluster_Jewel_inventory_icon.png`,
+    itemData: `
           Rarity: Normal
           Medium Cluster Jewel
           --------
@@ -116,12 +108,12 @@ export default {
           1 Added Passive Skill is a Jewel Socket (enchant)
           Added Small Passive Skills grant: 3% increased effect of Non-Curse Auras from your Skills (enchant)
 `,
-    });
-    window.itemShowcases.test3.applyOptions({
-      showLinkAsIcon: true,
-      displayAsTooltip: true,
-      imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/c/c9/Diamond_Flask_inventory_icon.png`,
-      itemData: `
+  });
+  window.itemShowcases.test3.applyOptions({
+    showLinkAsIcon: true,
+    displayAsTooltip: true,
+    imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/c/c9/Diamond_Flask_inventory_icon.png`,
+    itemData: `
           Rarity: Magic
           Perpetual Diamond Flask of Warding
           --------
@@ -140,12 +132,12 @@ export default {
           Immune to Curses during Flask effect
           Removes Curses on use
 `,
-    });
-    window.itemShowcases.test4.applyOptions({
-      showLinkAsIcon: true,
-      displayAsTooltip: true,
-      imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/4/48/Despair_inventory_icon.png`,
-      itemData: `
+  });
+  window.itemShowcases.test4.applyOptions({
+    showLinkAsIcon: true,
+    displayAsTooltip: true,
+    imageUrl: `https://static.wikia.nocookie.net/pathofexile_gamepedia/images/4/48/Despair_inventory_icon.png`,
+    itemData: `
           Rarity: Gem
           Anomalous Despair
           --------
@@ -171,16 +163,5 @@ export default {
           Cursed enemies take 25% increased Damage from Damage Over Time effects
           Adds 46 to 57 Chaos Damage to Hits against Cursed Enemies
 `,
-    });
-  },
-};
+  });
 </script>
-
-<style lang="scss">
-body {
-  background-color: black;
-}
-.item-showcase-wrapper {
-  margin: 20px;
-}
-</style>
